chore: update Dockerfile

--- a/dockerFile
+++ b/dockerFile
@@ -1,33 +1,40 @@
-FROM python:3.13-alpine
+FROM python:3.11-slim
 
-# Install dependencies for Chromium & Playwright
-RUN apk add --no-cache \
-    chromium \
-    nss \
-    freetype \
-    harfbuzz \
-    ttf-freefont \
-    mesa-gl \
-    libx11 \
-    libxcomposite \
-    libxdamage \
-    libxext \
-    libxi \
-    libxtst \
-    libxrandr \
-    alsa-lib \
-    bash \
+# Install dependencies for playwright and build tools
+RUN apt-get update && apt-get install -y \
     curl \
-    libc6-compat
+    wget \
+    gnupg \
+    libnss3 \
+    libatk1.0-0 \
+    libatk-bridge2.0-0 \
+    libcups2 \
+    libxcomposite1 \
+    libxdamage1 \
+    libxrandr2 \
+    libgbm1 \
+    libasound2 \
+    libpangocairo-1.0-0 \
+    libdrm2 \
+    libxshmfence1 \
+    libglib2.0-0 \
+    libxkbcommon0 \
+    build-essential \
+    && rm -rf /var/lib/apt/lists/*
 
-# Install pip packages
-RUN pip install --no-cache-dir playwright
-
-# Install Playwright browsers
-RUN playwright install chromium
-
+# Set working directory
 WORKDIR /app
 
-COPY main.py .
+# Copy requirements.txt if you have one, else skip
+COPY requirements.txt .
+
+# Install dependencies
+RUN pip install --no-cache-dir -r requirements.txt
+
+# Install playwright browsers
+RUN python -m playwright install --with-deps
+
+# Copy the rest of your code
+COPY . .
 
 CMD ["python", "main.py"]
